[package]
name = "esp-hal-sht31-ssd1306-interrupt-button"
version = "0.1.0"
authors = ["Alex K <kleydints@petalmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = "1.1.2"
embedded-graphics = "0.8.1"
embedded-hal = { package="embedded-hal", version="1.0"} 
embedded-hal-02= { package = "embedded-hal", version="0.2.7", features=["unproven"]} 
esp-backtrace = { version = "0.12.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = [ "esp32s3", "embedded-hal-02" ] }
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
sht31 = "0.2.0"
ssd1306 = "0.8.4"
xtensa-lx = "0.9.0"
[features]
embedded-hal-02 = ["esp-hal/embedded-hal-02"]
embedded-hal = ["esp-hal/embedded-hal"]
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
